tests/diagnostics/expressions/identifiers/unknown_name/expect.txt
# exit: 1
input/main.coppice:2:12: error: unknown name 'x'
      return x
             ^
